--- a/9_appendix.tex
+++ b/9_appendix.tex
@@ -22,7 +22,7 @@ The two standard input files for the ANITA-III and ANITA-IV flights come with th
 
 The output directory contains a series of root files with  information about all the neutrinos simulated, as well as a text file containing the neutrino survival efficiency at different stages of \icemc, and the volumetric acceptance.
 
-Other programs test a portion of the full \icemc tool:
+Other programs test a portion of the full \icemc program:
 \begin{itemize}
     \item {\tt testThermalNoise} simulates only the thermal noise at the payload for a specific ANITA flight.
     \item {\tt testInputAfterAntenna} simulates the injection of an RF impulse after the antenna feed; this program is used to produce trigger efficiency scans similar to the ones taken before each ANITA flight.
